# markdown-includes

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: README.tpl.md  lib.rs  lines.rs
src/fence/: mod.rs  rustdoc.rs  toc.rs
src/rustdoc_parse/: extract_doc.rs  mod.rs  options.rs  readme.md  utils.rs
src/rustdoc_parse/transform/: mod.rs  rust_markdown_tag.rs  rust_remove_comments.rs  utils.rs
src/rustdoc_parse/transform/intralinks/: links.rs  mod.rs  module_walker.rs
src/tests/: mod.rs  rustdoc1.rs  rustdoc_tests.rs  toc_tests.rs
