[package]
name = "markdown-includes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
percent-encoding = "2.2"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
cargo_metadata = "0.15"
syn = { version = "1.0", features = ["full", "extra-traits"] }
itertools = "0.10"
pulldown-cmark = "0.9"
unicase = "2.6.0"
string-sections = { git = "https://github.com/akesson/string-sections", rev = "f96c64304ed7a8b4aa6d291c98c610ce1712970d" }

[dev-dependencies]
insta = { version = "1.23", features = ["yaml"] }
pretty_assertions = "1.3"
indoc = "2.0.0"
