[package]
name = "markdown-includes"
license = "MIT"
repository = "https://github.com/akesson/markdown-includes"
description = "Include other documents, table of content, or rust-doc in Markdown using a simple template system"
categories = ["text-processing"]
keywords = ["markdown", "readme", "include"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
percent-encoding = "2.2"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
cargo_metadata = "0.15"
syn = { version = "1.0", features = ["full", "extra-traits"] }
itertools = "0.10"
pulldown-cmark = "0.9"
unicase = "2.6"
string-sections = "0.1"

[dev-dependencies]
insta = { version = "1.23", features = ["yaml"] }
pretty_assertions = "1.3"
indoc = "2.0.0"
